update bug where picture overflows in mobile

--- a/css/education.css
+++ b/css/education.css
@@ -9,7 +9,7 @@ body {
   padding-top: 50px;
 }
 .education .list-education {
-  margin: 0% 20% 0% 20%;
+  margin: 0% 10%;
   padding: 2% 0%;
 }
 
