--- a/css/experience.css
+++ b/css/experience.css
@@ -7,6 +7,7 @@ body {
 .experience {
   background-color: #9fd4a3;
 }
+
 .experience .list-experiences {
   margin: 0% 10%;
   padding: 2% 0%;
@@ -47,6 +48,9 @@ body {
   border-radius: 10px;
   margin-bottom: 10px;
   max-height: 400px;
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 .navbar-dark .navbar-nav .nav-link,
@@ -70,4 +74,42 @@ body {
 
 .footer a:hover {
   color: #f675a8;
+}
+
+/* Additional CSS for responsive badges */
+.badge {
+  white-space: normal;
+  word-wrap: break-word;
+  display: inline-block;
+  max-width: 100%;
+  margin-top: 5px;
+}
+
+/* Additional CSS for responsive images and columns */
+@media (max-width: 576px) {
+  .experience .list-experiences {
+    margin: 0% 5%;
+  }
+
+  .experience h1,
+  .experience h3,
+  .experience .introduction {
+    margin: 10px;
+    padding: 5px;
+  }
+
+  .experience .list-experiences img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .col-lg-6 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
 }
